--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -44,11 +44,16 @@ dependencies:
   equatable: ^2.0.3
   cloud_firestore: ^5.6.5
   fl_chart: ^0.70.2
+  firebase_storage: ^12.4.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
-
+  percent_indicator: ^4.2.4
+  table_calendar: ^3.0.9
+  http: ^1.3.0
+  image_picker: ^1.1.2
+  permission_handler: ^11.4.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
