--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.6.5
   fl_chart: ^0.70.2
   firebase_storage: ^12.4.5
+  tflite_flutter: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
