--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   percent_indicator: ^4.2.4
   table_calendar: ^3.0.9
   http: ^1.3.0
+  json_serializable: ^6.0.1
   image_picker: ^1.1.2
   permission_handler: ^11.4.0
   # The "flutter_lints" package below contains a set of recommended lints to
