updates+api+gps+local+DB storages

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,10 @@ android {
     }
 
     defaultConfig {
+        manifestPlaceholders = [
+    MAPS_API_KEY: dotenv['GPS_KEY']
+                                        ]
+
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.app"
         // You can update the following values to match your application needs.
@@ -33,6 +37,9 @@ android {
         versionName = flutter.versionName
         minSdkVersion 23
     }
+
+    def dotenv = new Properties()
+    dotenv.load(new FileInputStream(rootProject.file(".env")))
 
     buildTypes {
         release {
