--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,20 @@ dependencies:
   flutter_bloc: ^9.1.0
   hydrated_bloc: ^10.0.0
   intl: ^0.20.2
-  path_provider: ^2.0.9
+  
   equatable: ^2.0.3
   cloud_firestore: ^5.6.5
   fl_chart: ^0.70.2
   firebase_storage: ^12.4.5
   tflite_flutter: ^0.11.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.5
+  geolocator: ^13.0.4
+  google_maps_flutter: ^2.12.1
+  flutter_dotenv: ^5.2.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +64,8 @@ dev_dependencies:
   json_serializable: ^6.0.1
   image_picker: ^1.1.2
   permission_handler: ^11.4.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
