--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,17 +1,3 @@
-gradle-wrapper.jar
-/.gradle
-/captures/
-/gradlew
-/gradlew.bat
-/local.properties
-GeneratedPluginRegistrant.java
-
-# Remember to never publicly share your keystore.
-# See https://flutter.dev/to/reference-keystore
-key.properties
+# Ignore .env and keys.env in the android directory
 .env
-lib/Keys.env
-
-**/*.keystore
-**/*.jks
-# must not have the key file
+lib/keys.env
