--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   geolocator: ^13.0.4
   google_maps_flutter: ^2.12.1
   flutter_dotenv: ^5.2.1
-
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
