--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,14 +1,9 @@
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
+    id "com.google.gms.google-services"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
-
-
 
 android {
     namespace = "com.example.app"
@@ -23,40 +18,34 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
-/*
-    def dotenv = new Properties()
-def envFile = rootProject.file("keys.env")
-println("Loading env file from: " + envFile)
 
-dotenv.load(new FileInputStream(rootProject.file("keys.env")))
-*/
+    // ✅ Load keys from local.properties
+    def localProperties = new Properties()
+    def localPropertiesFile = rootProject.file("local.properties")
+    if (localPropertiesFile.exists()) {
+        localProperties.load(new FileInputStream(localPropertiesFile))
+    }
 
-
+    def gpsKey = localProperties['GPS_KEY'] ?: ""
+    //def anotherKey = localProperties['ANOTHER_KEY'] ?: ""
 
     defaultConfig {
-                                  
-
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.app"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
         minSdkVersion 23
 
-      /*   // ✅ Use the loaded key
+        // ✅ Inject the key into AndroidManifest
         manifestPlaceholders = [
-            MAPS_API_KEY: dotenv['GPS_KEY']
-        ]*/
+            MAPS_API_KEY: gpsKey,
+            
+        ]
     }
-
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
