--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,12 +18,12 @@
 
     <application
         android:label="app"
-        android:name="${applicationName}"
+       
         android:icon="@mipmap/ic_launcher">
 
          <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value=""/>
+        android:value="${MAPS_API_KEY}"/>
 
 
 
