--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,9 @@ dependencies:
   google_maps_flutter: ^2.12.1
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
-
+  workmanager: ^0.5.2
+  flutter_local_notifications: ^19.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
