--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,9 @@ dependencies:
   google_maps_flutter: ^2.12.1
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
-  workmanager: ^0.5.2
-  flutter_local_notifications: ^19.1.0
   firebase_remote_config: ^5.4.3
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -89,6 +89,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/
+    - assets/gifs/cardio/
+    - assets/gifs/keepfit/
+    - assets/gifs/liftforstrength/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
